--- a/backend/deployment.yml
+++ b/backend/deployment.yml
@@ -21,7 +21,7 @@ spec:
                   memory: "2000Mi"
                   cpu: "1"
           command: [ "/bin/bash", "-c", "--" ]
-          args: [ "python manage.py collectstatic --noinput && python manage.py migrate && /start" ]
+          args: [ "/start" ]
           ports:
             - containerPort: 9000
               name: django
